src/sass/base/variables/variables.scss
/* Core Variables
  =========================================================================== */
$global-content-width: 1200px !default;
$global-transition: all 0.2s ease-in-out !default;
$grid-gutter: 1rem !default;

$phone:             "all and (max-width: 40em)" !default;
$tablet:            "all and (min-width: 40em)" !default;
$tablet-and-below:  "all and (max-width: 64em)" !default;
$desktop:           "all and (min-width: 64em)" !default;
$desktop-large:     "all and (min-width: 96em)" !default;

/* z-index
  =========================================================================== */
$zindex-chat:         8000;
$zindex-modal:        7001;
$zindex-modaloverlay: 7000;
$zindex-overpanel:    6000;
$zindex-mobilemenu:   5000;
$zindex-dropdown:     4000;
$zindex-header:       3000;
$zindex-spinner:      2000;
$zindex-content:      1000;
$zindex-negative:       -1;

